# scurve_construct

./: CMakeLists.txt  README.md  gitnotes.txt  info.txt  performance_scurve_vs_ruckig.txt
scurve_auto_plot/: CMakeLists.txt  README.md  mainwindow.cpp  mainwindow.h  mainwindow.ui
scurve_construct/: CMakeLists.txt  main.cpp  scurve_construct.cpp  scurve_construct.h  scurve_struct.h
scurve_construct_plot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
scurve_engine/: CMakeLists.txt  main.cpp  scurve_engine.cpp  scurve_engine.h  scurve_segment.h  scurve_struct.h  scurve_vector.cpp  scurve_vector.h
scurve_jog_plot/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
